--- a/index.html
+++ b/index.html
@@ -49,10 +49,23 @@
                     </ul>
                 </div>
             </div>
-            <div class="navIconsDiv"></div>
+            <div class="navIconsDiv">
+                <div class="profileImgDiv">
+                    <img src="./assets/profileImg.jpg" alt="">
+                </div>
+                <div class="plusIconDiv">
+                    
+                </div>
+            </div>
         </div>
     </nav>
+    <div class="content">
+        <div class="cards">
+            
+        </div>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="app.js"></script>
 </body>
 
 </html>
